ポートを環境設定で指定する修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     build: .
     ports:
       - "25:25"
-    env_file: .env
+    env_file: .env.development
 #    volumes:
 #      - ./src:/maildaemon/src
